Fix nav menu item spacing issue

--- a/src/core/nav/nav-menu.module.scss
+++ b/src/core/nav/nav-menu.module.scss
@@ -91,7 +91,8 @@
 }
 
 .icons,
-.menus {
+.menus,
+.menusInner {
   display: flex;
   flex-direction: column;
 }
@@ -255,6 +256,7 @@
 
 .menu,
 .menus,
+.menusInner, 
 .items,
 .item {
   gap: 0.25rem;
